tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_nested_blackbox_input/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct Bar {
    inner: [u8; 3],
}

struct Foo {
    a: Field,
    b: [Field; 3],
    bar: Bar,
}

fn main(mut x: [Foo; 3], y: pub u32, hash_result: pub [u8; 32]) {
    x[y - 1_u32].bar.inner = [106_u8, 107_u8, 10_u8];
    let mut hash_input: [u8; 3] = x[y - 1_u32].bar.inner;
    hash_input[y - 1_u32] = 0_u8;
    let hash: [u8; 32] = std::hash::blake3(hash_input);
    assert(hash == hash_result);
}
